# strichliste2influxdb

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
src/strichliste2influxdb/api/: strichliste.py
src/strichliste2influxdb/cli/: __init__.py
